--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
+.app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  height: 100vh;
+  width: 100%;
+  background-color: skyblue;
+}
+
+.loading {
+  font-size: 3rem;
+}
+
+.alert {
+  font-size: 2rem;
+}
+
+.alert--error {
+  color: red;
+  font-weight: bold;
+}
+
+.seasonDisplay {
+  height: 75%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.seasonDisplay.seasonDisplay--summer {
+  background-color: lightyellow;
+}
+
+.seasonDisplay.seasonDisplay--winter {
+  background-color: aliceblue;
+}
+
+.seasonDisplay > .seasonDisplay__weather-icon:first-child {
+  align-self: flex-start;
+}
+
+.seasonDisplay > .seasonDisplay__weather-icon:last-child {
+  align-self: flex-end;
+}
+
+.seasonDisplay__title {
+  font-size: 3rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 769px) and (min-width: 300px) {
+  .seasonDisplay {
+    width: calc(100% - 90px);
   }
 }
